[tool.poetry]
name = "flink-playground*"
version = "0.1.0"
description = ""
authors = ["mfatihaktas <mfatihaktas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pytest = "^7.4.2"
apache-flink = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
